--- a/src/css/blocks/_navbar.scss
+++ b/src/css/blocks/_navbar.scss
@@ -1,15 +1,23 @@
 .header__menu {
+  padding-top: 31px;
+  margin-bottom: 25px;
+
   &-list {
     display: flex;
     align-items: flex-end;
   }
+
   &-item {
     width: 360px;
-    font-size: 18px;
+    height: 32px;
+    font-family: 'Montserrat';
+    font-weight: 500;
+    font-size: 17px;
     text-align: center;
+    line-height: 2;
     cursor: pointer;
-    color: #dfdfdf;
-    border-bottom: 1px solid #dfdfdf;
+    color: var(--color-gray);
+    border-bottom: var(--border);
   }
 
   &-link {
@@ -19,8 +27,9 @@
 }
 
 .item-active {
-  color: #000;
-  font-size: 24px;
-  border-bottom: 2px solid #42b5e9;
-  transition-duration: var(----transition-duration);
+  color: var(--color-accent-gray);
+  line-height: 1.2;
+  font-size: 26px;
+  border-bottom: 2px solid var(--color-blue);
+  transition-duration: var(--transition-duration);
 }
