--- a/src/css/styles/_utils.scss
+++ b/src/css/styles/_utils.scss
@@ -1,6 +1,10 @@
 @use 'media';
 @use 'mixins';
 
+.wrapper {
+  background-color: var(--color-blue-light);
+}
+
 .container {
   max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
   margin-inline: auto;
