--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -11,3 +11,8 @@
 @use 'blocks/search-bar/search-input';
 @use 'blocks/search-bar/dropdown';
 @use 'blocks/search-bar/search-date';
+@use 'blocks/search-bar/widget';
+
+@use 'blocks/ticketSales-mainContent';
+
+@use 'blocks/drawer';
