--- a/src/css/styles/_fonts.scss
+++ b/src/css/styles/_fonts.scss
@@ -13,3 +13,19 @@
   font-weight: 500;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('/src/css/fonts/Montserrat-SemiBold.woff2') format('woff2');
+
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('/src/css/fonts/Montserrat-Bold.woff2') format('woff2');
+
+  font-weight: 700;
+  font-style: normal;
+}
