--- a/src/css/styles/_variables.scss
+++ b/src/css/styles/_variables.scss
@@ -19,7 +19,7 @@
   --border: 1px solid var(--color-blue-alt);
   --border-radius-small: 2px;
 
-  --shadow: 0 5px 0 0 var(--color-dark);
+  --shadow: 0px 2px 6px 0px rgba(42, 63, 79, 0.15);
 
   --font-family-base: 'Montserrat', sans-serif;
 
