--- a/src/css/blocks/search-bar/_dropdown.scss
+++ b/src/css/blocks/search-bar/_dropdown.scss
@@ -2,7 +2,9 @@
   --dropdown-padding-items: 11px 14px 10px 20px;
 
   position: relative;
-  width: 204px;
+  min-width: 135px;
+  max-width: 204px;
+  flex-grow: 2;
 
   &__toggle {
     display: flex;
@@ -16,6 +18,7 @@
     font-size: 14px;
     font-family: var(--font-family-base);
     font-weight: 400;
+    white-space: nowrap;
     border: var(--border);
     border-radius: var(--border-radius-small);
     cursor: pointer;
@@ -33,10 +36,6 @@
     border-width: 0 2px 2px 0;
     transform: rotate(45deg);
     transition-duration: var(--transition-duration);
-
-    &.open {
-      transform: rotate(-135deg);
-    }
   }
 
   &__menu {
@@ -50,6 +49,7 @@
     font-weight: 400;
     border: var(--border);
     border-radius: var(--border-radius-small);
+    background-color: var(--color-light);
 
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     z-index: 3;
@@ -64,4 +64,8 @@
       background-color: #f5f5f5;
     }
   }
+}
+
+.open {
+  transform: rotate(-135deg);
 }
