--- a/src/css/blocks/search-bar/_search-date.scss
+++ b/src/css/blocks/search-bar/_search-date.scss
@@ -1,11 +1,14 @@
 .date-search {
-  --date-search-width: 200px;
+  --search-min-width: 170px;
+  --search-max-width: 204px;
 
+  min-width: var(--search-min-width);
+  max-width: var(--search-max-width);
+  display: flex;
+  flex-grow: 2;
   position: relative;
-  width: var(--date-search-width);
-  outline: none;
 
-  // без кастомного класса нельзя убрать дефолтное поведение инпута встроенного datepicker
+  // кастомный класс
   &__button {
     width: 100%;
     padding: 11px 17px 10px 20px;
@@ -16,33 +19,51 @@
     font-size: 14px;
     font-family: var(--font-family-base);
     font-weight: 400;
+    text-align: start;
+    white-space: nowrap;
     cursor: pointer;
+    user-select: none;
 
-    &:focus {
-      background-color: var(--color-blue-bg-focus);
+    &-wrapper {
+      position: relative;
+      min-width: var(--search-min-width);
     }
+  }
+
+  &__icon {
+    position: absolute;
+    top: 7px;
+    right: 17px;
+    cursor: pointer;
   }
 
   // кастомизация встроеннымх стилей календаря react-datepicker
   .react-datepicker {
-    border: 1px solid #ccc;
+    font-family: var(--font-family-base);
+    border: var(--border);
     border-radius: var(--border-radius-small);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
 
   .react-datepicker-wrapper {
-    width: var(--date-search-width);
+    min-width: var(--search-min-width);
+    max-width: var(--search-max-width);
+    flex-grow: 2;
   }
 
+  .react-datepicker-popper {
+    z-index: 3;
+  }
   .react-datepicker__header {
     background-color: #f5f5f5;
-    border-bottom: 1px solid #ccc;
+    border-bottom: var(--border);
     padding: 10px 0;
   }
 
   .react-datepicker__current-month {
     font-size: 18px;
     font-weight: bold;
+    text-transform: capitalize;
   }
 
   .react-datepicker__day-name,
@@ -59,11 +80,11 @@
     border-radius: 50%;
 
     &:hover {
-      background-color: #f0f0f0;
+      background-color: #f5f5f5;
     }
 
     &--selected {
-      background-color: #007bff; // тут цвет менять как в макете
+      background-color: var(--color-blue);
     }
   }
 
@@ -74,10 +95,14 @@
   // иконка стрелки навигации
   .react-datepicker__navigation-icon {
     &::before {
-      border-color: #a69dfc; // тут цвет менять как в макете
+      border-color: var(--color-blue);
       border-width: 2px 2px 0 0;
       width: 9px;
       height: 9px;
     }
   }
+}
+
+.button_active {
+  background-color: var(--color-blue-bg-focus);
 }
