--- a/src/css/styles/_utils.scss
+++ b/src/css/styles/_utils.scss
@@ -2,13 +2,14 @@
 @use 'mixins';
 
 .wrapper {
+  display: flex;
+  gap: 18px;
   background-color: var(--color-blue-light);
 }
 
 .container {
   max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
   margin-inline: auto;
-  padding-inline: var(--container-padding-x);
 }
 
 .visually-hidden {
