--- a/src/css/blocks/_drawer.scss
+++ b/src/css/blocks/_drawer.scss
@@ -1,9 +1,15 @@
+@use '../styles/media';
+
 .side-bar {
   --drawer-static-width: 66px;
   --drawer-open-width: 265px;
   --drawer-transition-duration: 0.4s;
   --divider-width: 12px;
   --padding-x: 9px;
+
+  @include media.mobile {
+    width: 100%;
+  }
 
   &__wrapper {
     font-family: var(--font-family-base);
@@ -16,6 +22,13 @@
 
     display: flex;
     flex-direction: column;
+
+    @include media.mobile {
+      flex-direction: row;
+      justify-content: space-between;
+      height: auto;
+      border-radius: 10px;
+    }
   }
 
   &__header {
@@ -29,7 +42,16 @@
     gap: 41px;
 
     margin-bottom: 42px;
+
+    @include media.mobile {
+      flex-direction: row;
+      flex-wrap: wrap;
+      gap: 3px;
+      padding: 9px;
+      margin-bottom: 0;
+    }
   }
+
   &__item {
     &-selected {
       background-color: var(--color-blue);
@@ -44,17 +66,22 @@
 
 .drawer__icon {
   display: inline-block;
+  cursor: pointer;
 
   &-wrapper {
     width: 48px;
     height: 48px;
-    cursor: pointer;
 
     display: flex;
     justify-content: center;
     align-items: center;
 
     border-radius: 15px;
+
+    @include media.mobile {
+      width: 40px;
+      height: 40px;
+    }
   }
 }
 
@@ -64,6 +91,10 @@
   border: 1px solid var(--color-light);
   opacity: 0.5;
   margin: 0 auto 42px;
+
+  @include media.mobile {
+    display: none;
+  }
 }
 
 .weather {
@@ -79,6 +110,10 @@
 .drawer__close {
   width: var(--drawer-static-width);
   transition-duration: var(--drawer-transition-duration);
+
+  @include media.mobile {
+    width: 100%;
+  }
 }
 
 .header__open {
@@ -87,6 +122,10 @@
 
 .header__close {
   width: 48px;
+
+  @include media.mobile {
+    display: none;
+  }
 }
 
 .divider__open {
@@ -98,12 +137,4 @@
 .divider__close {
   transition-duration: var(--drawer-transition-duration);
   width: var(--divider-width);
-}
-
-.body__open {
-  margin-right: auto;
-}
-
-.body__close {
-  margin-right: 0px;
 }
