--- a/src/css/blocks/search-bar/_dropdown.scss
+++ b/src/css/blocks/search-bar/_dropdown.scss
@@ -1,3 +1,5 @@
+@use '../../styles/media';
+
 .dropdown {
   --dropdown-padding-items: 11px 14px 10px 20px;
 
@@ -5,6 +7,11 @@
   min-width: 135px;
   max-width: 204px;
   flex-grow: 2;
+
+  @include media.mobile {
+    max-width: 100%;
+    width: 60%;
+  }
 
   &__toggle {
     display: flex;
