--- a/src/css/styles/_utils.scss
+++ b/src/css/styles/_utils.scss
@@ -5,6 +5,14 @@
   display: flex;
   gap: 18px;
   background-color: var(--color-blue-light);
+
+  @include media.mobile {
+    padding: 10px;
+
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .container {
